--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Calculator-cp</string>
+    <string name="settings">Settings</string>
+    <string name="abc_action_bar_up_description">wtf</string>
+    <string name="general">General</string>
+    <string name="language">Language</string>
+    <string name="theme">Theme</string>
+    <string name="clear_data">Clear all Data</string>
+    <string name="clear_data_dialog">Clear all data?</string>
+    <string name="yes">Yes</string>
+    <string name="cancel">Cancel</string>
 </resources>
