--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -9,4 +9,5 @@
     <string name="clear_data">Alle Daten löschen</string>
     <string name="clear_data_dialog">Alle Daten löschen?</string>
     <string name="yes">Ja</string>
+    <string name="cancel">Abbruch</string>
 </resources>
