--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="clear_data_dialog">Clear all data?</string>
     <string name="yes">Yes</string>
     <string name="cancel">Cancel</string>
+    <string name="converter">Converter</string>
 </resources>
