--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -10,4 +10,5 @@
     <string name="clear_data_dialog">Alle Daten löschen?</string>
     <string name="yes">Ja</string>
     <string name="cancel">Abbruch</string>
+    <string name="converter">Umrechner</string>
 </resources>
