--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -27,4 +27,10 @@
     <string name="confirm">Bestätigen</string>
     <string name="cover_dialog_title">Ist dies aktuell der äußere Display?</string>
     <string name="cover_dialog_description">Dies wird ein kompacteres Layout</string>
+    <string name="cover_screen_mode">Äußerer Bildschirm Modus</string>
+    <string name="enabled">Aktiv</string>
+    <string name="disabled">Inaktiv</string>
+    <string name="clear_data_description">Löscht Appdaten und Cache</string>
+    <string name="current">Aktuell:</string>
+    <string name="cover_screen_mode_description">Ausgewählter äußere Bildschirm</string>
 </resources>
