--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="clear_data_description">Clear app data and cache</string>
     <string name="current">Current:</string>
     <string name="cover_screen_mode_description">Selected Cover Screen </string>
+    <string name="system_default" translatable="false">System(default)</string>
 </resources>
