--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,36 +1,49 @@
 <resources>
     <string name="app_name">Calculator</string>
+
     <string name="settings">Settings</string>
-    <string name="abc_action_bar_up_description">back</string>
-    <string name="general">General</string>
-    <string name="language">Language</string>
-    <string name="theme">Theme</string>
-    <string name="clear_data">Clear all Data</string>
-    <string name="clear_data_dialog">Clear all data?</string>
-    <string name="yes">Yes</string>
-    <string name="cancel">Cancel</string>
     <string name="converter">Converter</string>
+
+    <string name="theme">Theme</string>
+    <string name="cover_screen_mode">Cover Screen Mode</string>
+    <string name="language">Language</string>
+    <string name="clear_data">Clear all Data</string>
+    <string name="version">Version</string>
+
+    <string name="current">Current:</string>
+    <string name="cover_screen_mode_description">Selected Cover Screen </string>
+    <string name="enabled">Active</string>
+    <string name="disabled">Inactive</string>
+    <string name="clear_data_description">Clear app data and cache</string>
+
+
+    <string name="ok">OK</string>
+    <string name="confirm">Confirm</string>
+    <string name="cancel">Cancel</string>
+
+    <string name="theme_dialog_title">Select Theme</string>
+    <string name="cover_screen_dialog_title">Is this currently the cover screen?</string>
+    <string name="language_dialog_title">Select Language</string>
+    <string name="clear_data_dialog_title">Clear all data?</string>
+
+    <string name="cover_dialog_description">Enable to apply a more compact, borderless layout when you are using the Cover Display.</string>
+    <string name="clear_data_dialog_description">Are you sure you want to clear all data?</string>
+
     <string name="label_from">From (%s)</string>
     <string name="label_to">To (%s)</string>
     <string name="value_1">Value 1</string>
     <string name="value_2">Value 2</string>
     <string name="converter_type">Converter Type</string>
+
     <string name="converter_type_volume">Volume</string>
     <string name="converter_type_area">Area</string>
     <string name="converter_type_length">Length</string>
     <string name="converter_type_weight">Weight</string>
     <string name="converter_type_temperature">Temperature</string>
     <string name="converter_type_currency">Currency</string>
+
     <string name="switch_units_description">Switch Units</string>
     <string name="navigate_back_description">Back Action</string>
-    <string name="confirm">Confirm</string>
-    <string name="cover_dialog_title">Is this currently the cover screen?</string>
-    <string name="cover_dialog_description">This will apply a more compact layout when you are on the Cover Display.</string>
-    <string name="cover_screen_mode">Cover Screen Mode</string>
-    <string name="enabled">Active</string>
-    <string name="disabled">Inactive</string>
-    <string name="clear_data_description">Clear app data and cache</string>
-    <string name="current">Current:</string>
-    <string name="cover_screen_mode_description">Selected Cover Screen </string>
+
     <string name="system_default">System</string>
 </resources>
