--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -19,7 +19,9 @@
 
     <string name="ok">Okay</string>
     <string name="confirm">Bestätigen</string>
+    <string name="yes">Ja</string>
     <string name="cancel">Abbruch</string>
+    <string name="no">Nein</string>
 
     <string name="theme_dialog_title">Wähle Theme</string>
     <string name="cover_screen_dialog_title">Ist dies aktuell der Frontdisplay?</string>
