--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -182,4 +182,20 @@
     <string name="speed_inches_per_second">inches/second</string>
     <string name="speed_yards_per_hour">yards/hour</string>
     <string name="speed_light_speed">light speed(m/s)</string>
+    <string name="open_navigation_menu">Open navigation menu\n</string>
+
+    <string name="developer_options_title">Developer Options</string>
+    <string name="dev_settings_description">Enable Alpha and Beta State Features</string>
+    <string name="developer_options">Developer Settings</string>
+    <string name="already_in_developer_mode">You are already in developer mode</string>
+    <string name="developer_mode_enabled">Developer mode enabled!</string>
+    <string name="taps_remaining_to_developer">You are now %d steps away from being a developer.</string>
+    <string name="show_dummy_profile_title">Enable Fake Google Profile</string>
+    <string name="restart_app_description">restart app</string>
+    <string name="blacked_out">Blacked-out</string>
+    <string name="blacked_out_description">Make Darkmode even darker.</string>
+    <string name="reset">Reset</string>
+    <string name="reset_settings">Reset all Settings</string>
+    <string name="reset_settings_dialog_title">Reset all settings?</string>
+    <string name="reset_settings_dialog_description">Are you sure you want to reset all settings?</string>
 </resources>
