--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -198,4 +198,8 @@
     <string name="reset_settings">Reset all Settings</string>
     <string name="reset_settings_dialog_title">Reset all settings?</string>
     <string name="reset_settings_dialog_description">Are you sure you want to reset all settings?</string>
+    <string name="more_infos">More infos</string>
+    <string name="app_version">App Version</string>
+    <string name="xenon_ui_version">Xenon-UI Version</string>
+    <string name="xenon_commons_version">Xenon-Commons Version</string>
 </resources>
